--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: easy-openvpn
-version: 2.3.10-1
+version: 2.3.10-2
 summary: An easy-to-manage OpenVPN deployment.
 description: |
     OpenVPN snap with management scripts that simplify PKI and client
@@ -23,18 +23,54 @@ apps:
         command: bin/ovpn_listclients
     add-client:
         command: bin/ovpn_addclient
+    revoke-client:
+        command: bin/ovpn_revokeclient
     show-client:
         command: bin/ovpn_getclient
+    connect-server:
+        command: openvpn --config
+        plugs:
+            - home
+            - network-control
     status:
         command: bin/ovpn_status
+    help:
+        command: bin/help
 
 parts:
     packages:
         plugin: nil
         stage-packages:
             - openvpn
-            - openssl
             - iptables
+    openvpn-utils:
+        plugin: dump
+        source: https://github.com/kylemanna/docker-openvpn.git
+        prepare:  git apply $SNAPCRAFT_STAGE/snappy-profile-and-disable-user-group.patch
+        filesets:
+            exclude:
+              - -docs
+              - -init
+              - -otp
+              - -test
+              - -.gitignore
+              - -.travis.yml
+              - -CONTRIBUTING.md
+              - -Dockerfile
+              - -Dockerfile.aarch64
+              - -README.md
+              - -alpine
+        stage:
+            - $exclude
+        prime:
+            - $exclude
+        after:
+            - patch
+    patch:
+        source: patches
+        plugin: dump
+        prime:
+            - -*
     easyrsa:
         plugin: dump
         source: https://github.com/OpenVPN/easy-rsa/releases/download/3.0.1/EasyRSA-3.0.1.tgz
@@ -42,10 +78,17 @@ parts:
             easyrsa: usr/local/easyrsa/easyrsa
             openssl-1.0.cnf: usr/local/easyrsa/openssl-1.0.cnf
             x509-types: usr/local/easyrsa/x509-types
-        snap:
+        prime:
             - usr/local/easyrsa
     scripts:
         plugin: dump
         source: .
-        snap:
-            - bin/*
+        organize:
+            "bin/configure": meta/hooks/configure
+        prime:
+           - -patches
+           - -README.md
+           - -spread.yaml
+           - -run-tests.sh
+           - -spread
+
