--- a/spread/main/connect_server/task.yaml
+++ b/spread/main/connect_server/task.yaml
@@ -13,7 +13,7 @@ execute: |
 
     # wait openvpn server to launch
     wait_for_systemd_service ${SERVICE_UNIT}
-    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | grep -Pzq 'Initialization Sequence Completed'
+    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | MATCH 'Initialization Sequence Completed'
 
     # add a client
     sudo easy-openvpn.add-client foo > foo.ovpn
@@ -28,4 +28,4 @@ execute: |
 
     # wait bit for client to initialize
     sleep 10
-    sudo tail -n 10 /var/log/syslog | grep -Pzq 'localhost openvpn.* Initialization Sequence Completed'
+    sudo tail -n 10 /var/log/syslog | MATCH 'localhost openvpn.* Initialization Sequence Completed'
