--- a/spread/main/monitor_status/task.yaml
+++ b/spread/main/monitor_status/task.yaml
@@ -13,7 +13,7 @@ execute: |
 
     # wait openvpn server to launch
     wait_for_systemd_service ${SERVICE_UNIT}
-    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | grep -Pzq 'Initialization Sequence Completed'
+    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | MATCH 'Initialization Sequence Completed'
 
     # add a client
     sudo easy-openvpn.add-client foo > foo.ovpn
