--- a/spread/main/revoke_after_connection/task.yaml
+++ b/spread/main/revoke_after_connection/task.yaml
@@ -13,13 +13,13 @@ execute: |
 
     # wait openvpn server to launch
     wait_for_systemd_service ${SERVICE_UNIT}
-    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | grep -Pzq 'Initialization Sequence Completed'
+    sudo journalctl -n 10 --no-pager -u ${SERVICE_UNIT} | MATCH 'Initialization Sequence Completed'
 
     # add a client
     sudo easy-openvpn.add-client foo > foo.ovpn
 
     # check if foo exists in the client list
-    sudo easy-openvpn.clients | grep -Pzq "foo.*VALID"
+    sudo easy-openvpn.clients | MATCH "foo.*VALID"
 
     # change foo.ovpn owner to avoid dac_override denied in snappy world.
     sudo chown root.root foo.ovpn
@@ -29,13 +29,13 @@ execute: |
 
     # wait bit for client to initialize
     sleep 10
-    sudo tail -n 10 /var/log/syslog | grep -Pzq 'localhost openvpn.* Initialization Sequence Completed'
+    sudo tail -n 10 /var/log/syslog | MATCH 'localhost openvpn.* Initialization Sequence Completed'
         
     # revoke the client
     sudo easy-openvpn.revoke-client foo
 
     # check if it's revoked
-    sudo easy-openvpn.clients | grep -Pzq "foo.*REVOKED"
+    sudo easy-openvpn.clients | MATCH "foo.*REVOKED"
 
     # kill openvpn client 
     pid=$(ps aux | grep -P '[o]penvpn.* foo.ovpn.*' | awk '{print $2}')
@@ -47,5 +47,5 @@ execute: |
     sudo easy-openvpn.connect-server foo.ovpn --daemon
     
     sleep 10
-    sudo tail -n 10 /var/log/syslog | grep -Pzq 'TLS Error: TLS handshake failed'
-    sudo tail -n 10 /var/log/syslog | grep -Pzq 'CRL CHECK FAILED: CN=foo.*is REVOKED'
+    sudo tail -n 10 /var/log/syslog | MATCH 'TLS Error: TLS handshake failed'
+    sudo tail -n 10 /var/log/syslog | MATCH 'CRL CHECK FAILED: CN=foo.*is REVOKED'
