--- a/spread/main/setup_server/task.yaml
+++ b/spread/main/setup_server/task.yaml
@@ -6,8 +6,8 @@ execute: |
     # set 'nopasswd' to 1 and check the value in help command
     # so that we can execute spread test in non-interactive mode 
     # without user attention on password input for private key generation.
-    sudo snap set easy-openvpn nopasswd=1
-    sudo easy-openvpn.help | MATCH "'nopasswd' current value set to: '1'.*"
+    sudo snap set easy-openvpn server-setup.nopasswd=1
+    sudo easy-openvpn.help | MATCH "'server-setup.nopasswd' current value set to: '1'.*"
 
     # setup openvpn server
     sudo easy-openvpn.setup -u "udp://${SERVER_IP}"
