--- a/spread/main/connect_server/task.yaml
+++ b/spread/main/connect_server/task.yaml
@@ -3,7 +3,7 @@ summary: Test connect openvpn server.
 execute: |
     . $TESTSLIB/utilities.sh
     # so enable to setup server in non-interactive mode 
-    sudo snap set easy-openvpn nopasswd=1
+    sudo snap set easy-openvpn server-setup.nopasswd=1
 
     # setup openvpn server
     sudo easy-openvpn.setup -u "udp://${SERVER_IP}"
