--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -83,8 +83,11 @@ parts:
             easyrsa: usr/local/easyrsa/easyrsa
             openssl-1.0.cnf: usr/local/easyrsa/openssl-1.0.cnf
             x509-types: usr/local/easyrsa/x509-types
+        stage:
+            - -ChangeLog
         prime:
             - usr/local/easyrsa
+            - -ChangeLog
     scripts:
         plugin: dump
         source: .
