Add two piece of license files and adjust the description of snap a bit.
Some parts of easy-openvpn-pkg (scripts, etc) are a derivative work based on
docker-openvpn and we should comply with the MIT license(LICENSE.docker-openvpn).
Also, easy-openvpn snap is licensed under the terms of the GPLv3 and
Copyright by Canonical Ltd.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -3,9 +3,7 @@ version: 2.3.10-4
 summary: An easy-to-manage OpenVPN deployment.
 description: |
     OpenVPN snap with management scripts that simplify PKI and client
-    management for fast, cheap and disposable VPNs. Based on
-    https://github.com/kylemanna/docker-openvpn.
-    It is an open source project distributed under MIT License.
+    management for fast, cheap and disposable VPNs.
     See the project homepage for more details:
     https://code.launchpad.net/~snappy-hwe-team/snappy-hwe-snaps/+git/easy-openvpn
 confinement: strict
